[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/themes/dialogue-response.theme" type="Theme" id=1]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/scripts/dialogue-response.gd" type="Script" id=2]
[ext_resource path="res://assets/gfx/test_portait.png" type="Texture" id=3]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/animations/SETUP.anim" type="Animation" id=4]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/animations/fade-in.anim" type="Animation" id=5]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/animations/fade-out.anim" type="Animation" id=6]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/animations/instant-in.anim" type="Animation" id=7]
[ext_resource path="res://ui/dialogue_handler/prefabs/dialogue_response/animations/instant-out.anim" type="Animation" id=8]
[ext_resource path="res://assets/spritesheets/greybox_tiles/greybox_tiles_spritesheet.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[node name="DialogueResponse" type="HBoxContainer"]
margin_left = 128.0
margin_top = 32.0
margin_right = 1792.0
margin_bottom = 392.0
rect_min_size = Vector2( 1664, 360 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
_button_spacing = 0

[node name="CharacterPortrait" type="TextureRect" parent="."]
margin_right = 256.0
margin_bottom = 360.0
rect_min_size = Vector2( 256, 360 )
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = ExtResource( 4 )
anims/fade-in = ExtResource( 5 )
anims/fade-out = ExtResource( 6 )
anims/instant-in = ExtResource( 7 )
anims/instant-out = ExtResource( 8 )

[node name="CharacterTyper" type="Timer" parent="."]
wait_time = 0.05

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 272.0
margin_right = 1664.0
margin_bottom = 360.0
size_flags_horizontal = 3

[node name="CharacterName" type="Label" parent="VBoxContainer"]
margin_right = 1392.0
margin_bottom = 38.0
text = "First \"Nick\" Last"

[node name="DialoguePanel" type="NinePatchRect" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1392.0
margin_bottom = 237.0
rect_min_size = Vector2( 0, 195 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/DialoguePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -32.0
rect_min_size = Vector2( 0, 130 )
mouse_filter = 1
scroll_horizontal_enabled = false

[node name="Responses" type="VBoxContainer" parent="VBoxContainer/DialoguePanel/ScrollContainer"]
margin_right = 1344.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )
size_flags_horizontal = 3
size_flags_vertical = 6

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="CharacterTyper" to="." method="_on_CharacterTyper_timeout"]
